@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-24T01:16:29Z",
-  "count_outdated" : 1952,
-  "uniques_outdated" : 1191,
+  "timestamp" : "2025-09-25T01:17:05Z",
+  "count_outdated" : 1962,
+  "uniques_outdated" : 1200,
   "count" : 1977,
   "uniques" : 1215,
   "clones" : [
-    {
-      "timestamp": "2025-09-11T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 10, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 9,
-      "uniques_minmax": [ 9, 9 ],
-      "uniques_decinc": [ 0, 9 ]
-    },
     {
       "timestamp": "2025-09-12T00:00:00Z",
       "count": 1,
