@@ -1,12 +1,7 @@
 {
-  "count": 25,
-  "uniques": 15,
+  "count": 15,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2025-09-11T00:00:00Z",
-      "count": 10,
-      "uniques": 9
-    },
     {
       "timestamp": "2025-09-12T00:00:00Z",
       "count": 1,
